@@ -6,6 +6,7 @@ v2.8.16 update licensing information in Python extension (Jan Dittberner)
         add Korean translation (Eunju Kim)
         updated Russian translation (Yulia Poyarko)
         fix filename output in Python exceptions (Nalin Dahyabhai)
+	fix format strings in util/packer.c (Mike Frysinger)
 v2.8.15 allow building of Python extension outside source folder (Jan Dittberner)
         fix type on Python extension's trove classifier
         reflect license change discussion that was never actually implemented in the repository and update to LGPL
